[egg_info]
tag_build = .dev
tag_date = true

[aliases]
release = egg_info -Db ''

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 120
ignore = I101,W504
import-order-style = smarkets
application-import-names = pycmark_gfm

[mypy]
ignore_missing_imports = True
strict_optional = False
